added full-sized images to try out responsiveness, fix issues on resizing and some js to display first picture on load

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <div class="container">
             <!-- first image will go here -->
             <img
-              src="./assets/images/Rectangle 13.png"
+              src="./assets/images/image1.jpg"
               id="expandedImg"
               style="width: 100%"
             />
@@ -55,7 +55,7 @@
           <div class="images-row">
             <div class="product-image">
               <img
-                src="./assets/images/Rectangle 13.png"
+                src="./assets/images/image1.jpg"
                 alt="Snow"
                 style="width: 100%"
                 onclick="myFunction(this);"
@@ -63,7 +63,7 @@
             </div>
             <div class="product-image">
               <img
-                src="./assets/images/Rectangle 12.png"
+                src="./assets/images/image2.jpg"
                 alt="Mountains"
                 style="width: 100%"
                 onclick="myFunction(this);"
@@ -71,7 +71,7 @@
             </div>
             <div class="product-image">
               <img
-                src="./assets/images/Rectangle 13.png"
+                src="./assets/images/image3.jpg"
                 alt="Lights"
                 style="width: 100%"
                 onclick="myFunction(this);"
@@ -79,7 +79,7 @@
             </div>
             <div class="product-image">
               <img
-                src="./assets/images/Rectangle 12.png"
+                src="./assets/images/image4.jpg"
                 alt="Mountains"
                 style="width: 100%"
                 onclick="myFunction(this);"
