--- a/index.html
+++ b/index.html
@@ -319,12 +319,6 @@
       </div>
     </div>
 
-    <script>
-      function myFunction(imgs) {
-        var expandImg = document.getElementById("expandedImg");
-        expandImg.src = imgs.src;
-        expandImg.parentElement.style.display = "block";
-      }
-    </script>
+    <script src="./assets/js/script.js"></script>
   </body>
 </html>
